--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,13 @@ h2 {
 
 }
 
+h3 {
+  font-family: 'Nanum Gothic', sans-serif;
+  font-size: 40px;
+  color: #FC6399;
+  
+}
+
 nav ul {
     list-style: none;
     font-size: 25px;
